Fixed extra margin bottom on header

--- a/app/assets/stylesheets/site/layout.css.sass
+++ b/app/assets/stylesheets/site/layout.css.sass
@@ -21,6 +21,9 @@ section[role="main"]
     position: relative
     padding-bottom: 30px
 
+    *:last-child
+      margin-bottom: 0
+
   *:not(h1) ~ nav
     margin-top: 20px
 
